Fixed issue where GameCards could sometimes overlap

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -181,7 +181,6 @@ input:focus {
 .gameCard {
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 350px;
   width: 400px;
   border-radius: 10px;
   display: flex;
